# named_type

./: Cargo.toml  README.md
.circleci/: config.yml
named_type/: Cargo.toml
named_type/src/: lib.rs
named_type_derive/: Cargo.toml
named_type_derive/src/: lib.rs
named_type_test/: Cargo.toml
named_type_test/src/: lib.rs
