[package]
name = "named_type_derive"
version = "0.2.1"
authors = ["Christian Howe <cjhowe7@pm.me>", "Thomas Lienbacher <lienbacher.tom@gmail.com>"]
description = "Derive support for named_type"
license = "MIT OR Apache-2.0"
edition = "2018"

documentation = "https://docs.rs/named_type"
homepage = "https://github.com/cjhowe7/named_type"
repository = "https://github.com/cjhowe7/named_type"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.9"
quote = "0.3.15"
named_type = "0.2"
